--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "lodash": "^4.17.15"
   }
 }
