--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-scrollama": "^2.1.0"
+    "react-scrollama": "^2.1.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
