add redirects script in package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "redirects": "echo '/*    /index.html   200' > build/_redirects",
     "test": "jest",
     "eject": "react-scripts eject"
   },
