--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "d3": "^5.15.0",
+    "gsap": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
@@ -19,6 +20,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scrollama": "^2.1.0",
+    "react-spring": "^8.0.27",
+    "react-visibility-sensor": "^5.1.1",
     "styled-components": "^5.1.0",
     "uuid": "^8.0.0"
   },
