--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "d3": "^5.15.0",
+    "eslint": "^7.15.0",
+    "eslint-loader": "^4.0.2",
+    "global": "^4.4.0",
     "gsap": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
