--- a/package.json
+++ b/package.json
@@ -1,41 +1,27 @@
 {
-  "name": "popgen-atlas",
+  "name": "prototype",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
-    "@react-google-maps/api": "^1.13.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "d3": "^5.15.0",
-    "eslint-loader": "^4.0.2",
-    "global": "^4.4.0",
-    "gsap": "^3.5.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "react-scrollama": "^2.1.0",
-    "react-spring": "^9.0.0-rc.3",
-    "styled-components": "^5.1.0",
-    "uuid": "^8.0.0"
+    "@material-ui/core": "^4.11.2",
+    "chart.js": "^2.9.4",
+    "crypto-js": "^4.0.0",
+    "dexie": "^3.0.2",
+    "react": "^17.0.1",
+    "react-chartjs-2": "^2.10.0",
+    "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^5.1.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "react-switch": "^5.0.1",
+    "react-virtualized": "^9.22.2",
+    "reactstrap": "^8.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "redirects": "echo '/*    /index.html   200' > build/_redirects",
-    "test": "jest",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -48,10 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "babel-preset-env": "^1.7.0",
-    "jest": "^24.9.0",
-    "lodash": "^4.17.15"
   }
 }
