--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "popgen-atlas",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.1",
     "d3": "^5.15.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
