--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "base64-js": "^1.5.1",
+    "canvasjs": "^1.8.3",
+    "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^2.9.4",
     "crypto-js": "^4.0.0",
+    "d3": "^6.3.1",
+    "d3-scale": "^3.2.3",
     "dexie": "^3.0.2",
+    "rc-queue-anim": "^1.8.5",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.1",
@@ -15,7 +21,8 @@
     "react-scripts": "4.0.0",
     "react-switch": "^5.0.1",
     "react-virtualized": "^9.22.2",
-    "reactstrap": "^8.7.1"
+    "reactstrap": "^8.7.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
