--- a/package.json
+++ b/package.json
@@ -4,24 +4,32 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@use-it/interval": "^1.0.0",
     "base64-js": "^1.5.1",
     "canvasjs": "^1.8.3",
     "canvasjs-react-charts": "^1.0.5",
     "chart.js": "^2.9.4",
     "crypto-js": "^4.0.0",
-    "d3": "^6.3.1",
+    "d3": "^6.5.0",
+    "d3-brush": "^2.1.0",
     "d3-scale": "^3.2.3",
+    "d3-zoom": "^2.0.0",
     "dexie": "^3.0.2",
+    "fabric": "^4.3.1",
+    "fabric-webpack": "^1.6.0-rc.1",
+    "konva": "^7.2.2",
     "rc-queue-anim": "^1.8.5",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^5.1.0",
+    "react-konva": "^17.0.1-3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-switch": "^5.0.1",
     "react-virtualized": "^9.22.2",
     "reactstrap": "^8.7.1",
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.2.1"
   },
   "scripts": {
