--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@use-it/interval": "^1.0.0",
     "base64-js": "^1.5.1",
     "canvasjs": "^1.8.3",
@@ -12,6 +12,7 @@
     "crypto-js": "^4.0.0",
     "d3": "^6.5.0",
     "d3-brush": "^2.1.0",
+    "d3-collection": "^1.0.7",
     "d3-scale": "^3.2.3",
     "d3-zoom": "^2.0.0",
     "dexie": "^3.0.2",
@@ -24,12 +25,14 @@
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^5.1.0",
     "react-konva": "^17.0.1-3",
+    "react-rangeslider": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-switch": "^5.0.1",
     "react-virtualized": "^9.22.2",
     "reactstrap": "^8.7.1",
     "resize-observer-polyfill": "^1.5.1",
+    "rsuite": "^4.9.2",
     "styled-components": "^5.2.1"
   },
   "scripts": {
