--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@use-it/interval": "^1.0.0",
     "base64-js": "^1.5.1",
     "canvasjs": "^1.8.3",
@@ -23,6 +24,7 @@
     "react": "^17.0.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-infinite-scroll-component": "^5.1.0",
     "react-konva": "^17.0.1-3",
     "react-rangeslider": "^2.2.0",
