--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "d3-collection": "^1.0.7",
     "d3-scale": "^3.2.3",
     "d3-zoom": "^2.0.0",
-    "dexie": "^3.0.2",
+    "dexie": "3.1.0-alpha.8",
+    "dexie-react-hooks": "^1.0.6",
     "fabric": "^4.3.1",
     "fabric-webpack": "^1.6.0-rc.1",
     "konva": "^7.2.2",
