--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@tidyjs/tidy": "^2.0.8",
+    "classnames": "^2.3.1",
     "d3": "^6.6.0",
     "d3-selection": "^2.0.0",
     "lodash": "^4.17.21",
