--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-switch": "^6.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1",
