--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3": "^6.6.0",
     "d3-selection": "^2.0.0",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
